---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLR1708 Explicit `raise StopIteration` in generator
  --> stop_iteration_return.py:38:5
   |
38 |     raise StopIteration  # Should trigger
   |     ^^^^^^^^^^^^^^^^^^^
   |
help: Use `return` instead

PLR1708 Explicit `raise StopIteration` in generator
  --> stop_iteration_return.py:44:5
   |
44 |     raise StopIteration("finished")  # Should trigger
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: Use `return` instead

PLR1708 Explicit `raise StopIteration` in generator
  --> stop_iteration_return.py:50:5
   |
50 |     raise StopIteration(1 + 2)  # Should trigger
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: Use `return` instead

PLR1708 Explicit `raise StopIteration` in generator
  --> stop_iteration_return.py:56:5
   |
56 |     raise StopIteration("async")  # Should trigger
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: Use `return` instead

PLR1708 Explicit `raise StopIteration` in generator
  --> stop_iteration_return.py:62:9
   |
62 |         raise StopIteration("inner")  # Should trigger
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: Use `return` instead

PLR1708 Explicit `raise StopIteration` in generator
  --> stop_iteration_return.py:71:13
   |
71 |             raise StopIteration("method")  # Should trigger
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: Use `return` instead

PLR1708 Explicit `raise StopIteration` in generator
  --> stop_iteration_return.py:81:9
   |
81 |         raise StopIteration("complex")  # Should trigger
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: Use `return` instead

PLR1708 Explicit `raise StopIteration` in generator
  --> stop_iteration_return.py:91:9
   |
91 |         raise StopIteration("conditional")  # Should trigger
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: Use `return` instead

PLR1708 Explicit `raise StopIteration` in generator
  --> stop_iteration_return.py:98:5
   |
98 |     raise StopIteration  # Should trigger (no arguments)
   |     ^^^^^^^^^^^^^^^^^^^
   |
help: Use `return` instead

PLR1708 Explicit `raise StopIteration` in generator
   --> stop_iteration_return.py:105:13
    |
105 |             raise StopIteration("loop")  # Should trigger
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
help: Use `return` instead

PLR1708 Explicit `raise StopIteration` in generator
   --> stop_iteration_return.py:149:9
    |
149 |         raise StopIteration  # Should trigger
    |         ^^^^^^^^^^^^^^^^^^^
    |
help: Use `return` instead

PLR1708 Explicit `raise StopIteration` in generator
   --> stop_iteration_return.py:154:5
    |
154 |     raise StopIteration((yield 1))  # Should trigger
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
help: Use `return` instead
